--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">APNearMe</string>
     <string name="action_settings">Settings</string>
     <string name="section_format">Hello World from section: %1$d</string>
+    <string name="google_places_key">AIzaSyBFxx4OkRWKvbkkL0fwAWCTzCumAAjOVmI</string>
 </resources>
